--- a/files/setup/README.org
+++ b/files/setup/README.org
@@ -22,6 +22,11 @@ Automated process for
 - [ ] spotify
 - [ ] sticky password
 - [ ] [[https://www.sumatrapdfreader.org/download-free-pdf-viewer.html][sumatra 3.1]]
+- [ ] sublime
+- [ ] TeX Live
+- [ ] TeXworks
+- [ ] Just edit in emacs, build in Windows TeXworks
+- [ ] Mendeley
 #### uninstall
 - [ ] fitbit
 - [ ] solitaire
