--- a/newSpaced.org
+++ b/newSpaced.org
@@ -18,9 +18,16 @@ Define the word
 Something [like] this
 
 * Vocab
+** Fact                                                               :drill:
+  :PROPERTIES:
+  :ID:       8508d927-f008-4992-9716-88822af7240b
+  :END:
+[Seppo]: derogatory British rhyming slang for a Septic tank -> Yank
+
 ** Adjective                                                          :drill:
   :PROPERTIES:
   :DRILL_CARD_TYPE: twosided
+  :ID:       0d34ddd9-6c6e-4146-8a21-662080f47321
   :END:
 Define the word
 *** English
@@ -37,12 +44,12 @@ impossiblity? I felt indignant.
   :ID:       7492a706-0c5b-461b-97a2-39dc65d37cc4
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2019-07-13 Sat 12:00]
+  :DRILL_LAST_REVIEWED: [2019-07-31 Wed 12:13]
   :END:
 Define the word
 *** English
@@ -78,12 +85,12 @@ Damocles was an obsequious courtier in the court of Dionysius II of Syracuse, a
   :ID:       ea78b238-1b2a-47d5-b228-e141a90940e6
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 2.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2019-07-13 Sat 11:58]
+  :DRILL_LAST_REVIEWED: [2019-07-31 Wed 12:14]
   :END:
 The [Sword of Damocles] is an allusion to the imminent and ever-present peril
 faced by those in positions of power.
@@ -94,12 +101,12 @@ faced by those in positions of power.
   :ID:       4a0ef0ce-321b-4c18-a3c0-3393672263c0
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 1.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2019-07-13 Sat 11:59]
+  :DRILL_LAST_REVIEWED: [2019-07-31 Wed 12:13]
   :END:
 Define the word
 *** English
@@ -119,12 +126,12 @@ constancy
   :ID:       e65d8942-48fc-475c-bc05-590f0d09f1a9
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 1.0
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 0.5
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 1
-  :DRILL_LAST_REVIEWED: [2019-07-13 Sat 12:10]
+  :DRILL_LAST_QUALITY: 0
+  :DRILL_LAST_REVIEWED: [2019-07-31 Wed 12:12]
   :END:
 Define the word
 *** English
@@ -185,12 +192,12 @@ should never [be] done. - Michel de Montaigne
   :ID:       cd31ee48-713f-4231-80a3-71d01905c813
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
-  :DRILL_AVERAGE_QUALITY: 2.0
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
+  :DRILL_AVERAGE_QUALITY: 1.5
   :DRILL_EASE: 2.5
-  :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2019-07-13 Sat 12:01]
+  :DRILL_LAST_QUALITY: 1
+  :DRILL_LAST_REVIEWED: [2019-07-31 Wed 12:12]
   :END:
 Define the word
 *** English
@@ -239,12 +246,12 @@ small number of them. - Michel de Montaigne
   :ID:       dd842f3e-2292-44a0-9872-577e33e23b49
   :DRILL_LAST_INTERVAL: 0.0
   :DRILL_REPEATS_SINCE_FAIL: 1
-  :DRILL_TOTAL_REPEATS: 1
-  :DRILL_FAILURE_COUNT: 1
+  :DRILL_TOTAL_REPEATS: 2
+  :DRILL_FAILURE_COUNT: 2
   :DRILL_AVERAGE_QUALITY: 2.0
   :DRILL_EASE: 2.5
   :DRILL_LAST_QUALITY: 2
-  :DRILL_LAST_REVIEWED: [2019-07-13 Sat 12:02]
+  :DRILL_LAST_REVIEWED: [2019-07-31 Wed 12:13]
   :END:
 Define the word
 *** English
