--- a/docs/quotes.org
+++ b/docs/quotes.org
@@ -1,7 +1,7 @@
 # Quotes
 
 * Death
-"Another repied to his confesosr, who awas promising him that he should sup that
+"Another repied to his confesosr, who was promising him that he should sup that
  day with Our Lord: You go there yourself; for my part, I'm fasting."
   - Michel de Montaigne, That the Taste of Good and Evil Depends in Large Part
                          on the Opinion We Have of Them
