--- a/docs/quotes.org
+++ b/docs/quotes.org
@@ -24,6 +24,9 @@
 
 
 * Humor
+"Why don't you take your library card and fuck off."
+  - Logan Roy, Succession 2:4
+
 "Even on the highest throne in the world, we are still sitting on our ass."
   - Michel de Montaigne
 
@@ -39,3 +42,8 @@
 "The most difficult thing in the world is to know how to do a thing and to watch
  someone else do it wrong without comment."
   - Theodore H. White
+
+
+* Thoughts
+"And if I am a man of some reading, I am a man of no retentiveness"
+  - Michel de Montaigne
