--- a/quotes.org
+++ b/quotes.org
@@ -29,6 +29,8 @@ racing. The rest are merely games."
  constancy"
  - Cicero
 
+"Happiness is reality minus expectations"
+
 
 * Humor
 "Why don't you take your library card and fuck off."
@@ -55,8 +57,25 @@ racing. The rest are merely games."
 "And if I am a man of some reading, I am a man of no retentiveness"
   - Michel de Montaigne
 
+"Hypocrisy is the homage vice pays to virtue."
+
+"So marvelous is the power of conscience! It makes us betray, accuse and fight
+ ourselves, and, in the absence of an outside witness, it brings us forward
+ against ourselves."
+       `Plying a secret whip, our soul as torturer.` - Juvenal
+  - Michel de Montaigne
+
+"Spirit of iron makes skin of stone."
+  - Ta-Nehisi Coates, Black Panther
+
+"Wide is the range of words, one one side and the other."
+  - Homer
+
 "Hell is truth seen too late"
   - Thomas Hobbes
+
+"To shun the heaven that leads men to this hell"
+  - Shakespeare, Sonnet 129
 
 
 * Politics
