--- a/files/setup/README.org
+++ b/files/setup/README.org
@@ -38,6 +38,7 @@ Automated process for
 #### uninstall
 - [ ] fitbit
 - [ ] solitaire
+- [ ] candy-crush
 ### STUFF TO LOOK INTO
 - [ ] Sublime and [[https://github.com/sublime-emacs/sublemacspro][Emacs keybindings]]
 - [ ] [[https://latextools.readthedocs.io][latextools]] and Miktex? I'm trying latexmk
