--- a/spacedRepetition.org
+++ b/spacedRepetition.org
@@ -1,5 +1,5 @@
 # -*- mode: org; coding: utf-8 -*-
-#+STARTUP: showall
+#+STARTUP: overview
 * -----------------------------------------------------------------------------------------------
 
 ** Adjective, Noun, Verb
@@ -21,6 +21,25 @@ Something [like] this
 
 
 * Vocab
+** Fact                                                               :drill:
+  :PROPERTIES:
+  :END:
+[Philogoy] is the study of language in oral and written historical sources; it
+is the intersection of textual criticism, literary criticism, history, and
+linguistics. [Philology] is more commonly defined as the study of literary texts
+as well as oral and written records, the establishment of their authenticity
+and their original form, and the determination of their meaning.
+
+** Fact                                                               :drill:
+  :PROPERTIES:
+  :END:
+[presque vu]: the tip of the tongue phenomenon, in which you know that you know
+something, but can't quite recall it.
+** Fact                                                               :drill:
+  :PROPERTIES:
+  :END:
+[Milgram Experiment]: an expirement that had people following orders to shock
+others, up to lethal doses if it were a real life expirement
 ** Adjective                                                          :drill:
     SCHEDULED: <2018-12-22 Sat>
   :PROPERTIES:
